--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.example</groupId>
-	<artifactId>simple-rest-apis</artifactId>
+	<groupId>com.task.tracker</groupId>
+	<artifactId>Task Tracker</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-
-	<name>com.task.tracker</name>
-	<description>Task Tracker</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -37,15 +34,16 @@
 		</dependency>
 
 		<dependency>
-                      <groupId>mysql</groupId>
-                            <artifactId>mysql-connector-java</artifactId>
-                            <version>8.0.20</version>
-                        </dependency>
-                        <dependency>
-                            <groupId>org.hibernate</groupId>
-                            <artifactId>hibernate-core</artifactId>
-                            <version>4.1.6.Final</version>
-                        </dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.20</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>4.1.6.Final</version>
+        </dependency>
 	</dependencies>
 
 	<build>
@@ -56,6 +54,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
