--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/task_tracker?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/task_tracker?serverTimezone=UTC 
 spring.datasource.username=dbadmin
 spring.datasource.password=Theaternimda1
-server.port = 8080
-http.port=80
-https.port=443
-server.error.whitelabel.enabled=false
-host.address=https://localhost:8080
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
